force-app/main/default/objects/SSR_Log__c/SSR_Log__c.object-meta.xml
<CustomObject>
    <description>Journal d'exécution des recettes SSR (écrit par SSRLogger depuis les Queueables). Purge via SSRLogPurgeSchedulable.</description>
    <label>SSR Log</label>
    <nameField>
        <displayFormat>SSR-{00000000}</displayFormat>
        <label>SSR Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SSR Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>