force-app/main/default/objects/SSR_Log__c/fields/Duration_Ms__c.field-meta.xml
<CustomField>
    <fullName>Duration_Ms__c</fullName>
    <description>Millisecondes écoulées depuis le début du Queueable au moment du log.</description>
    <label>Duration (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>