force-app/main/default/objects/SSR_Log__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <description>Id du job async (AsyncApexJob) qui a produit le log, pour corrélation avec les logs de debug.</description>
    <externalId>true</externalId>
    <label>Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>