force-app/main/default/objects/SSR_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Détail lisible : erreur Slack/OpenAI, décision de routage, motif de fallback, etc.</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>