force-app/main/default/objects/SSR_Log__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>Pour les recettes IA : openai ou fallback. Vide sinon.</description>
    <label>Mode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>