force-app/main/default/objects/SSR_Log__c/fields/Recipe_Key__c.field-meta.xml
<CustomField>
    <fullName>Recipe_Key__c</fullName>
    <description>Clé de la recette SSR à l'origine du log (ex. recipe_10, ou un libellé pour les recettes sans CMDT).</description>
    <label>Recipe Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>