force-app/main/default/objects/SSR_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Id de l'enregistrement déclencheur (Lead, Case, Opportunity…).</description>
    <externalId>true</externalId>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>