force-app/main/default/objects/SSR_Log__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <description>Étape du Queueable (ex. scoring, routing, notify, persist).</description>
    <label>Step</label>
    <length>80</length>
    <type>Text</type>
</CustomField>